--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      let [a, b] = [1,2]
+      console.log(a, b);
+    </script>
   </body>
 </html>
